--- a/datas/download_datas.ipynb
+++ b/datas/download_datas.ipynb
@@ -68,6 +68,42 @@
     "\n",
     "print(\"Path to dataset files:\", path)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "845a1941",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/lick/project/VQ/datas\n"
+     ]
+    }
+   ],
+   "source": [
+    "! pwd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "49f63600",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "! mv /home/lick/.cache/kagglehub/datasets/soumikrakshit/ /home/lick/project/VQ/datas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4a9be5f7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
